# tool-boxes

./: .gitignore  README.md
common/transformations/: README.md
common/transformations/coordinates/: coordinates.cpp  coordinates.h
common/transformations/orientation/: orientation.cpp  orientation.h
common/transformations/unit_test/: test_coordinate.py  test_transform.py
design-pattern/: README.md  README_zh.md
design-pattern/singleton/ins_singleton_example/: CMakeLists.txt  main.cpp
design-pattern/singleton/ins_singleton_example/include/: ins_data_receiver.h
design-pattern/singleton/ins_singleton_example/include/admsg/ins/: InsData.hpp
design-pattern/singleton/ins_singleton_example/lcm-message/: ins_data.lcm
design-pattern/singleton/ins_singleton_example/source/: ins_data_receiver.cpp
examples/: README.md  README_zh.md
examples/c++-exmaples/binary_file_read_write/: CMakeLists.txt  binary_file_read.cpp  binary_file_write.cpp  image_binary_read_write.cpp  test.txt
examples/c++-exmaples/shared_memory_example/: CMakeLists.txt  client.cpp  server.cpp
examples/c++-exmaples/shared_memory_example/include/: common_shm.h
examples/c++-exmaples/shared_memory_example/source/: common_shm.cpp
examples/c++-exmaples/stl_algorithm/: CMakeLists.txt  README.md  main.cpp
examples/c++-exmaples/stl_algorithm/test_data/: test2.txt
examples/cmake-examples/01-basic/E-installing/: README.md
examples/cmake-examples/01-basic/H-third-party-library/: README.md
examples/cmake-examples/02-sub-projects/: README.md
examples/gtest_example/: CMakeLists.txt
examples/gtest_example/include/: classA.h
examples/gtest_example/source/: classA.cpp  main.cpp
examples/gtest_example/unit_test/: CMakeLists.txt  myAddTest.cpp  myFixtureTest.cpp  myMultiTest.cpp
examples/open3d-examples/: CMakeLists.txt  readme.md
examples/open3d-examples/open3d-viewer/: CMakeLists.txt  main.cpp
examples/open3d-examples/open3d-viewer/source/: MyGuiVisualizer.cpp
examples/open3d-examples/resources/: lines.filamat
examples/open3d-examples/visualization/: CMakeLists.txt  visulization_test.cpp
examples/opencv-examples/: CMakeLists.txt  readme.md
examples/opencv-examples/multi-thread-imshow/: CMakeLists.txt  imshow_test.cpp
examples/opencv-examples/shared_memory_imshow/: CMakeLists.txt  video_reader.cpp  video_reader_1.cpp  video_reader_2.cpp  video_writer.cpp
examples/opencv-examples/shared_memory_imshow/include/: shared_image_data.h
examples/protobuf2_example/: CMakeLists.txt
examples/protobuf2_example/conf/: calibration.config
examples/protobuf2_example/protos/: calibration.pb.cc  calibration.pb.h  calibration.proto  clear_protos.sh  run_protoc.sh
examples/protobuf2_example/source/: main.cpp
examples/protobuf3_example/: CMakeLists.txt  readme.md
examples/protobuf3_example/include/: config_manager.h
examples/protobuf3_example/protos/: calibration.pb.cc  calibration.pb.h  calibration.proto
examples/protobuf3_example/source/: main.cpp
examples/python-examples/multi-thread-imshow/: README.md
test-data/: Sumsung-S10-intrinsics  test_lidar_1.pcd
